--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
-{
+{ "proxy" : "http://localhost:3000",
   "name": "toy-tale-client",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +7,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1"
   },
-  "proxy": "http://localhost:3000",
+ 
   "scripts": {
     "start": "PORT=4000 react-scripts start"
   },
